--- a/algos/books.org
+++ b/algos/books.org
@@ -1,418 +1,8 @@
-- katas https://web.archive.org/web/20160701032652/https://codingdojo.org/cgi-bin/index.pl?KataCatalogue
-  https://dojorena.io/manuals/43
-  https://www.youtube.com/user/ltaravilse/videos
-- https://dojorena.io/with/the-best-coding-challenge
-
-- https://github.com/cl2333/Grokking-the-Coding-Interview-Patterns-for-Coding-Questions
-- https://github.com/codenjoyme/codenjoy
-- https://github.com/ec24/tc-arg
-- https://github.com/fogleman/AdventOfCode2021/
-- https://github.com/jwasham/coding-interview-university
-- https://github.com/matramos/elrejunte
-- https://github.com/undefinedfceia/guardian-tortuga
-
-- https://hackernoon.com/14-patterns-to-ace-any-coding-interview-question-c5bb3357f6ed
-- https://malisper.me/an-algorithm-for-passing-programming-interviews/
-- https://ourmachinery.com/post/data-structures-part-1-bulk-data/
-- CS170 - Efficient Algorithms and Intractable Problems https://cs170.org/
-
-- https://cses.fi/problemset/
-- https://codeforces.com/
-- https://www.codechef.com/
-- https://www.hackerearth.com/
-- https://www.codingame.com/
-- https://www.hackerrank.com/
-- https://www.codewards.com/
-- https://projecteuler.net/
-
-* Congruencies
-- https://en.wikipedia.org/wiki/Modular_arithmetic
-- problem https://www.codewars.com/kata/554f76dca89983cc400000bb/train/ocaml
-- Books
-  file:///home/sendai/disk/anybody/Steven%20Halim/Competitive%20Programming%203%20(4427)/Competitive%20Programming%203%20-%20Steven%20Halim.pdf#page=241
-  file:///home/sendai/disk/anybody/David%20Esparza%20Alba/Algorithms%20For%20Competitive%20Programming%20(4592)/Algorithms%20For%20Competitive%20Programming%20-%20David%20Esparza%20Alba.pdf#page=311
-  file:///home/sendai/disk/anybody/Skiena,%20Steven%20S_/Programming%20Challenges%20(4425)/Programming%20Challenges%20-%20Skiena,%20Steven%20S_.pdf#page=174
-* Videos
-- Algorithmic Toolbox (Complete Course) https://www.youtube.com/watch?v=CAfMYNNsVAo
-** Data Structures
-   https://www.youtube.com/playlist?list=PLI1t_8YX-Apv-UiRlnZwqqrRT8D1RhriX
-   Balanced Parentheses in Expression
-   Queue With Two Stacks
-   Stacks and Queues
-   Cycles in a Linked List
-   Linked Lists
-   Binary Search Tree
-   Trees
-   Solve 'Contacts' Using Tries
-   Tries
-   Heaps
-   Solve 'Find the Running Median' Using Heaps
-   Anagram Problem Solution
-   Hash Tables
-   Solve 'Ransom Note' Using Hash Tables
-   Hash Tables
-** Algorithms
-   https://www.youtube.com/playlist?list=PLI1t_8YX-ApvMthLj56t1Rf-Buio5Y8KL
-   Recursion
-   Solve 'Ice Cream Parlor' Using Binary Search
-   Binary Search
-   Solve 'Shortest Reach' Using BFS
-   Solve 'Connected Cells' Using DFS
-   Solve 'Recursive Staircase' Using Recursion
-   Quicksort
-   Merge Sort
-   Bubble Sort
-   Solve 'Coin Change' Using Memoization and DP
-   Memoization and Dynamic Programming
-   Sort An Array with Comparator
-   Bit Manipulation
-   Graph Search, DFS and BFS
-   Solve 'Lonley Integer' Using Bit Manipulation
-** Channel
-- https://www.youtube.com/@insidecode/videos
-- https://www.youtube.com/@johnlevine2909/videos
-- Reducible https://www.youtube.com/c/Reducible
-- "Algorithms with Attitude" https://www.youtube.com/channel/UCUGQA2H6AXFolADHf9mBb4Q
-- CodeEric https://www.youtube.com/channel/UCVUreMZC948wS-KecowbA_g/
-- Coding with Some Guy https://www.youtube.com/channel/UCBwH4Xj7s5C9tkeYxI3dIzA/about
-- Creel https://www.youtube.com/c/WhatsACreel/videos
-- Club de Programación Competitiva https://www.youtube.com/channel/UCZalVP2C0nwe0JjmItyKS1w/videos
-- Programacion Competitiva Bolivia https://www.youtube.com/channel/UCod9TyxrhF8QHMezaVzMDVg/videos
-- Club de Programación Competitiva UMSA https://www.youtube.com/channel/UCi3lobNX_J1cMW6BjFZGTmw/videos
-* Video: Balanced binary search tree rotations.
-   https://www.youtube.com/watch?v=q4fnJZr8ztY
-   - We move the nodes without breaking the tree invariants (the hierarchy of the rest of the nodes)
-     We do NOT care about the structure, only of the invariants of the BST (left<right)
-     The level does NOT matter, the left-right does.
-   - code (missing update of possible parent link on A to point to B)
-     #+begin_src python
-     function righRotate(A):
-       B := A.left
-       A.left = B.right
-       B.right = A
-       return B
-     #+end_src
-* Video: Floyd Warshall - All Pairs Shortest Path Algorithm
-  https://www.youtube.com/watch?v=4NQ3HnhyNfQ
- - Ideal for <200 nodes
- - APSP = All Pairs Shortest Path algorithm
- - m[i][j] = 2D Adjacency Matrix
-   0        for self
-   infinity for unreachable
- - We use a memoized table of the previous optimal solutions
-   from i to j
-   routing through nodes 0..k
-   #+begin_src c
-     dp[k][i][j];
-     dp[k][i][j] = m[i][j]; // if k = 0
-     dp[k][i][j] = min(dp[k-1][i][j],
-                       dp[k-1][i][k]+dp[k-1][k][j]);
-     // OR
-     dp[i][j] = m[i][j]; // if k = 0
-     dp[i][j] = min(dp[i][j],
-                    dp[i][k]+dp[k][j]);
-   #+end_src
- - Comparison
-  |            | BFS      | Dijkstra    | Bellman | Floyd    |
-  |            |          |             | Ford    | Warshall |
-  |------------+----------+-------------+---------+----------|
-  | Complexity | V + E    | (V+E) log V | V . E   | V^3      |
-  | Graph Size | large    | large       | medium  | small    |
-  | APSP?      | unweight | ok          | ~bad~   | yes      |
-  | (-) Cycles | no       | no          | yes     | yes      |
-  | weighted   | no       | =Best=      | ok      | ~bad~    |
-  | unweighted | =Best=   | ok          | ~bad~   | ~bad~    |
-  |------------+----------+-------------+---------+----------|
-** Code
-   #+begin_src python
-     function propagateNegativeCycles(dp, n):
-         # Execute FW APSP algorithm a 2nd time but
-         # this time if the distance can be improved
-         # set the optimal distance to be -INFINITY
-         # Every edge (i,j) marked with -INFINITY is either
-         # part of OR reaches into a negative cycle.
-         for(k := 0; k < n; k++):
-             for(i := 0; i < n; i++):
-                 for(j := 0; j < n; j++):
-                     if(dp[i][k] + dp[k][j] < dp[i][j]):
-                         dp[i][j] = -INFINITY
-                         next[i][j] = -1
-     function setup(m):
-         # dp   = empty matrix of size n x n
-         # next = empty integer matrix of size n x n
-         # Do a deep copy of the input matrix
-         # ...and setup the next matrix for path reconstruction
-         for(i := 0; i < n; i++):
-             for(j := 0; i < n; j++):
-                 dp[i][j] = m[i][j]
-                 if m[i][j] != +INFINITE:
-                     next[i][j] = j
-     # n    = size of adjacency matrix
-     # dp   = memp table
-     # next = matrix used to reconstruct shortest paths
-     function floydWarshall(m):
-         setup(m)
-         # Execute FW all pairs shortest path algorithm
-         for(k := 0; k < n; k++):
-             for(i := 0; i < n; i++):
-                 for(j := 0; j < n; j++):
-                     if(dp[i][k] + dp[k][j] < dp[i][j]):
-                         dp[i][j] = dp[i][k] + dp[k][j]
-                         next[i][j] = next[i][k]
-         # Detect and propagate negative cycles
-         propagateNegativeCycles(dp, n)
-         # Return APSP matrix
-         return dp
-     # Reconstructs the shortest path between nodes
-     # 'start' and 'end.
-     # Returns null if path is affected by negative cycle.
-     function reconstructPath(start, end):
-         path = []
-         # Check if there exists a path between
-         # the start and the end node.
-         if dp[start][end] == +INFINITY: return path
-         at := start
-         # reconstrct path from =next= matrix
-         for(;at != end; at = next[at][end]):
-             if at == -1: return null
-             path.add(at)
-
-         if next[at][end] == -1: return null
-         path.add(end)
-         return path
-   #+end_src
-* TODO Video: Bellman Ford   - Shortest path & Negative cycles
-https://www.youtube.com/watch?v=lyw4FaxrwHg
-- SSSP (Single Source Shortest Path)
-- O(E*V)
-- When Dijkstra fails, negative cycles
-- Real World use case: when doing an *arbitrage* in economics
-* Video: NeetCode - Top 5 Most Common =Graph Algorithms= for Coding Interviews
-  https://www.youtube.com/watch?v=utDu3Q7Flrw
-  - Prim's Kruska's (Minimum Spanning Tree)
-  - Floyd Warshall's Algorithm
- | DFS         | O(n)     | HashSet(cycles) | Recursive |
- | DFS         | O(n)     | Stack           | Iterative |
- |-------------+----------+-----------------+-----------|
- | BFS         | O(n)     | (de)Queue       | Iterative |
- |             |          | HashSet(cycles) |           |
- |-------------+----------+-----------------+-----------|
- | Union       | O(nlogn) | Forest of Trees |           |
- | Find        |          |                 |           |
- |-------------+----------+-----------------+-----------|
- | Topological | O(n)     | HashSet         |           |
- | Sort (DFS)  |          |                 |           |
- |-------------+----------+-----------------+-----------|
- | Dijstra's   | O(ElogV) | Heap            |           |
- | Shortest    |          | HashSet         |           |
- | Path        |          |                 |           |
-* Video: NeetCode - Top 5 =Dynamic Programming= Patterns for Coding Interviews - For Beginners
-  https://www.youtube.com/watch?v=mBNrRy2_hVs
- - Dimensions
-   - 1D:
-     - Fibonacci
-   - 2D: (size of target, if we use a coin or not)
-     - 0/1 Knapsack: in diagonal
-     - Unbounded Knapsack: from the bottom right, to the left
- - Types
-   1) Fibonnaci Numbers: solved using bottom-up approach, starting from the bottom
-      - from F(0) to F(1) and so on...
-      - we also do NOT need to keep everything (N) on memory, just the last 2
-   2) 0/1 Knapsack: Can we sum to TARGET with these ITEMS
-      - We can use the ITEMS 0 or 1 times
-      - Combinations being 2^n
-   3) Unbounded Knapsack:
-      - We are allowed to use ITEMS infinite number of times
-      - TARGET still exists
-   4) Longest Common Subsequence:
-      - 
-   5) Palindromes
-** Original Table
-1. Fibonacci Numbers
-| Climbing Stairs                     | https://youtu.be/Y0lT9Fck7qI | https://leetcode.com/problems/climbing-stairs/                     |
-| House Robber                        | https://youtu.be/73r3KWiEvyk | https://leetcode.com/problems/house-robber/                        |
-| Maximum Alternating Subsequence Sum | https://youtu.be/4v42XOuU1XA | https://leetcode.com/problems/maximum-alternating-subsequence-sum/ |
-| Fibonacci Number                    |                              | https://leetcode.com/problems/fibonacci-number/                    |
-2. Zero / One Knapsack
-| Partition Equal Subset Sum | https://youtu.be/IsvocB5BJhw                | https://leetcode.com/problems/partition-equal-subset-sum/ |
-| Target Sum                 | https://www.youtube.com/watch?v=g0npyaQtAQM | https://leetcode.com/problems/target-sum/                 |
-3. Unbounded Knapsack
-| Coin Change              | https://youtu.be/H9bfqozjoqs                | https://leetcode.com/problems/coin-change/              |
-| Coin Change II           | https://www.youtube.com/watch?v=Mjy4hd2xgrs | https://leetcode.com/problems/coin-change-2/            |
-| Minimum Cost for Tickets | https://www.youtube.com/watch?v=4pY1bsBpIY4 | https://leetcode.com/problems/minimum-cost-for-tickets/ |
-4. Longest Common Subsequence
-| Longest Common Subsequence     | https://youtu.be/Ua0GhsJSlWM | https://leetcode.com/problems/longest-common-subsequence/     |
-| Longest Increasing Subsequence | https://youtu.be/cjWnW0hdF1Y | https://leetcode.com/problems/longest-increasing-subsequence/ |
-| Edit Distance                  | https://youtu.be/XYi2-LPrwm4 | https://leetcode.com/problems/edit-distance/                  |
-| Distinct Subsequences          | https://youtu.be/-RDzMJ33nx8 | https://leetcode.com/problems/distinct-subsequences/          |
-5. Palindromes
-| Longest Palindromic Substring   | https://youtu.be/XYQecbcd6_c | https://leetcode.com/problems/longest-palindromic-substring    |
-| Palindromic Substrings          | https://youtu.be/4RACzI5-du8 | https://leetcode.com/problems/palindromic-substrings/          |
-| Longest Palindromic Subsequence |                              | https://leetcode.com/problems/longest-palindromic-subsequence/ |
-* Video: freeCodeCamp - Solve Coding Interview Backtracking Problems - Crash Course
-https://www.youtube.com/watch?v=A80YzvNwqXA
-- LeetCode Problems: NQueen, Sudoku
-- Components: State
-- Functions:
-  - is_valid_state(state)
-  - get_candidates(state)
-  - search(state, solutions)
-  - solve()
-
-* Course: 2015 | MIT 6.046J Design and Analysis of Algorithms
-https://www.youtube.com/playlist?list=PLUl4u3cNGP6317WaSNfmCvGym2ucw3oGp
-* Course: 2020 | MIT 6.006 Introduction to Algorithms
-https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
-** DONE 1. Algorithms and Computation
-- Solve Computational Problems, communicating, correct and efficiently
-- A problem is a relation between an INPUT and an OUTPUT (like a bipartite graph)
-  f: I -> O
-- Efficicency: use Asyntotic Analysis, measure in "ops". Depends on size of input.
-  O() upper bounds
-  n() lower bounds - Omega
-  8() both  bounds - Tetha
-- O(1)
-  O(log n)   after some time itstarts to look like constant
-  O(n)
-  O(n log n) after some time it start to look linear
-  O(n ^ ?)
-  2^O(n)
-- Design our own algorithm
-  1) Brute Force
-  2) Decrease and Conquer
-  3) Divide and Conquer
-  4) Dynamic Programming
-  5) Greedy / Incremental
-- Reduce to a problem you already know (use a DS or algo)
- | Data Structures      | Sort Algorithms | Shortest Path Algo |
- |----------------------+-----------------+--------------------|
- | Static Array         | Insertion Sort  | BFS                |
- | Linked List          | Selection Sort  | DFS                |
- | Dynamic Array        | Merge Sort      | Topological Sort   |
- | Sorted Array         | Counting Sort   | Bellman-Ford       |
- | Direct Access Array  | Radix Sort      | Dijkstra           |
- | Hash Table           | AVL Sort        | Johnson            |
- | Balanced Binary Tree | Heap Sort       | Floyd-Warshall     |
- | Binary Heap          |                 |                    |
-** DONE 2. Data Structures and Dynamic Arrays
-- Interface (API/ADT) vs Data Structures
-  | Interface           | Data Structure                |
-  |---------------------+-------------------------------|
-  | specification       | representation                |
-  | what data can store | how to store data             |
-  | what the ops do     | algorithms to support the ops |
-  | problem             | solution                      |
-- Approaches
-  - Arrays
-  - Pointers
-- Static  Sequence (Interface) : Static Array (Data Structure)
-  - build(X)
-  - len()
-  - iter_seq()
-  - get_at(i)
-  - set_at(i,x)
-  - get_first/last()
-  - set_first/last(x)
-- Dynamic Sequence (Interface) : Linked Lists (DS, pointer based)
-  - insert_at(i,x)
-  - delete_at(i)
-  - insert/delete_first/last(x)/()
-- *DS Augmentation* can be done to a simple LL by adding a extra pointer to the tail,
-  which would make insert_last O(1)
-- Dynamic Sequence OPS
- |               | get/set_at | insert/delete_first | insert/delete_last | insert/delete_at |
- | Static Array  | =1=        | n                   | n                  | n                |
- | Linked List   | n          | =1=                 | n                  | n                |
- | Dynamic Array | =1=        | n                   | =1=                | n                |
-- How can we get BOTH the benefits of Static Arrays and Linked Lists?
-  Dynamic Arrays, implemented in Python as "Lists"
-  (ME: Implementation looks like Go Slices)
-  Static Arrays being resized
-  DS: 1) array pointer 2) length 3) size
-  length <= size
-- Geometric Series: are dominated for by the last term (the biggest term)
-  O(E 2^i) = O(2^(log n)) = O(n)
-- Amortization: a particular kind of avg (charging 1 cost all the others that make it happen)
-  operation takes T(n) amortized time
-  if any k ops take <=  k T(n)
-** DONE 3. Sets and Sorting
-- Interface     : collection of OPS (eg: sequence & set)
-  Data Structure: way to store data that supports a set of OPS
-- Possible DS for Set Interface
-  |                | build   | find  | insert | find_min | find_prev |
-  |                |         |       | delete | find_max | find_next |
-  |----------------+---------+-------+--------+----------+-----------|
-  | Unsorted Array | n       | n     | n      | n        | n         |
-  | Sorted Array   | n log n | log n | n      | 1        | log n     |
-- Destructive: overrides the input array
-  In Place   : uses O(1) extra space
-- n! is the number of permutations on a list with n members
-- Permutation Sort
-  #+begin_src python
-    def permutation_sort(A):
-        for B in permutation(A):
-            if is_sorted(B):
-                return B
-  #+end_src
-- Selection Sort:
-  1) find max with index <= 1
-  2) swap
-  3) sort rest (back to step 1)
-  #+begin_src python
-    def prefix_max(A, i):
-        '''Return index of maximum in A[:i + 1]'''
-        if i > 0:
-            j = prefix_max(A, i - 1)
-            if A[i] < A[j]:
-                return j
-        return i
-  #+end_src
-- Insertion Sort...
-- Merge Sort
-  #+begin_src python
-    def merge_sort(A, a = 0, b = None):
-        if b is None: b = len(A)
-        if 1 < b - a:
-            c = (a + b + 1) // 2
-            merge_sort(A, a, c)
-            merge_sort(A, c, b)
-            L, R = A[a:c], A[c:b]
-            merge(L, R, A, len(L), len(R), a, b)
-  #+end_src
-** 4. Hashing
-** 5. Linear Sorting
-** 6. Binary Trees, Part 1
-- Missing some performant operations on the current DS
-- "Inspired" by Linked List, with 3 links instead of 1 or 2 like in Double-LL
-- depth(X) = #ancestors = #edges in path from X to root (downward)
- height(X) = #edges in longest downward path (upward, from node)
-           = max depth() of a node in subtree
-- traversal ops: both O(h) where h is the height
-  - subtree_first(node): leftmost leaf
-  - successor(node): next after node, leftmost leaf on the right child subtree, or walkup tree until up a left branch
-  - subtree_insert_after(node, new)
-** 7. Binary Trees, Part 2: AVL
-** 8. Binary Heaps
-** 9. Breadth-First Search
-** Quiz 1 review
-** 10. Depth-First Search
-** 11. Weighted Shortest Paths
-** 12. Bellman-Ford
-** 13. Dijkstra
-** 14. APSP and Johnson
-** Quiz 2 Review
-** 15. Dynamic Programming, Part 1: SRTBOT, Fib, DAGs, Bowling
-** 16. Dynamic Programming, Part 2: LCS, LIS, Coins
-** 17. Dynamic Programming, Part 3: APSP, Parens, Piano
-** 18. Dynamic Programming, Part 4: Rods, Subset Sum, Pseudopolynomial
-** 19. Complexity
-** 20. Course Review
-** 21. Algorithms Next Steps
-* Book: Algebraic Graph Algorithms (Springer)
+* Algebraic Graph Algorithms (Springer)
 - It can be viewed from the angle of *group theory* or *linear algebra*
 - The book deals with LinA, taking advantage of Matrix Operations
 - https://teachyourselfcs.com/#algorithms
-* Book: 06 | Art of Programming Contest       | Ahmed Shamsul Arefin
+* 06 | Art of Programming Contest       | Ahmed Shamsul Arefin
 ** 06 Brute Force Method
 - This method should almost always be the first algorithm/solution you consider.
   - If this works within time/space constraints then do it
@@ -521,7 +111,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
   - Kruskal's, Prims's for MST.
   - Algorithm for finding optimum Huffman trees.
   - matroids and theory of greedoids
-* Book: 12 | Coding Interviews                | Harry He
+* 12 | Coding Interviews                | Harry He
 ** 4 Algorithms
 *** Backtracking
 - is a refinement of the *brute-force* approach, which systematically searches for a solution to a problem among all available options.
@@ -532,7 +122,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
 - If an interview problem has *optimal substructure* and *overlapping subproblems*, it might be solved by DP.
 | optimal substructure    | means that the solution to a given ~optimization~ problem can be obtained by a combination of optimal solutions. |
 | overlapping subproblems | means a recursive algorithm solves subproblems over and over, rather than always generating new subproblems.     |
-* Book: 13 | Competitive Programming 3        | Steven Halim
+* 13 | Competitive Programming 3        | Steven Halim
 ** 1
 - "Given well-known Computer Science Problems, solve them as quickly as possible!"
 - Doing a *complete search* using recursive backtracking might yield *time limit exceeded* (TLE)
@@ -583,7 +173,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
   - can be found using a greedy algorithm, choosing the largest fibonacci number at each step.
 - Pisano Period
 **** TODO Binomial Coefficients
-* Book: 15 | Cracking the Coding Interview    | Gayle Laakmann
+* 15 | Cracking the Coding Interview    | Gayle Laakmann
   SELF: Why interviews don't flip the roles. Ask us to give an opinion about something they did.
   Ask us to predict the beheviour and results of it.
 ** II Behind the scenes
@@ -831,7 +421,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
  | Stack of Boxes     | larger boxes below, height of the tallest possible stack of boxes   |
  | Boolean Evaluation | eval a string                                                       |
  |--------------------+---------------------------------------------------------------------|
-* Book: 16 | Grokking Algorithms              | Aditya Y. Bhargava
+* 16 | Grokking Algorithms              | Aditya Y. Bhargava
 ** DONE 6 BFS Bread-First Search - O(V + E)
  - What is the *shortest path* to go to X?
  - Uses a Queue/FIFO/deque (double-ended queue in python)
@@ -912,7 +502,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
   | 2 | How do you divide this problem into *subproblems*? | compare sub-substrings          |
   | 3 | What are the *axes* of the grid?                   |                                 |
  - The answer might not be in the last cell, in this case is the largest number in the grid
-* Book: 20 | Algorithmic Thinking             | Daniel Zingaro
+* 20 | Algorithmic Thinking             | Daniel Zingaro
 ** 3 Memoization And Dynamic Programming
 - =Optimization Problem= involves choosing the *optimal* (best) solution out of all *feasible* solutions.
 *** Burger Fevor - UVA 10465
@@ -1154,7 +744,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
   NOT to find the ~optimal solution~
 - Subtask 1: n door = n switch
   - Naive: 1door at the time, O(n) ? one for() loop
-* Book: 20 | Data Structures and Algorithms   | Jay Wengrow
+* 20 | Data Structures and Algorithms   | Jay Wengrow
 ** 12 Dynamic Programming
  - https://en.wikipedia.org/wiki/Overlapping_subproblems
    - Lec 13 | MIT 6.00 Introduction to Computer Science and Programming, Fall 2008
@@ -1173,7 +763,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
    |                            |                                                  | DP/Bottom-up                |
 ** TODO 13 Recursive Algorithms for Speed
  - Partitioning
-* Book: 20 | Guide to Competitive Programming | Antti Laaksonen
+* 20 | Guide to Competitive Programming | Antti Laaksonen
 ** TODO 7 Graph Algorithms
  - 7.3 *Dijkstra* is more efficient that *Bellman-Ford's*, but it requires non-negative weights.
    And *Floyd-Warshall's* ????
@@ -1382,7 +972,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
 - Special case of a GP
   1 + 2 + 4 + 8 + ... + 2^(n-1) = 2^n - 1
 - Upper bound is: log 2 (n) + 1
-* Book: 21 | Programming Algorithms in Lisp   | Vsevolod Domkin
+* 21 | Programming Algorithms in Lisp   | Vsevolod Domkin
   Source: https://github.com/vseloved/progalgs-code
 ** Notes on rtl:
    https://github.com/vseloved/rutils/blob/master/docs/tutorial.md
@@ -1675,7 +1265,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
        (values mst total)))
    #+end_src
 **** Kruskal's Algoritm
-* Book: 22 | Generic DS and Algorithms in Go  | Richard Wiener
+* 22 | Generic DS and Algorithms in Go  | Richard Wiener
 ** 14 Ecological Simulation with Concurrency
 ** 17 Travelling Salesperson Problem (TSP)
 - =Exact algorithm= https://en.wikipedia.org/wiki/Exact_algorithm
@@ -1777,7 +1367,7 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
           fmt.Println("Computation time: ", elapsed)
   }
 #+end_src
-* Book: ?? | Algorithm Design Manual
+* ?? | Algorithm Design Manual
 ** 10 Dynamic Programming
 - Example: Fibonacci using memoization, by caching/tabling the intermediate values
   - A linear amount of space for an exponential amount of time is an excellent trade-off
@@ -1795,6 +1385,6 @@ https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
       1   4   6   4   1
     1   5  10  10   5   1
     #+end_src
-* Book: ?? | Introduction to Algorithms
+* ?? | Introduction to Algorithms
 ** 22 Single-Source Shortest Path
 - The INPUT of a SSSP is a weighted, directed graph.
