--- a/languages/js/node/books.org
+++ b/languages/js/node/books.org
@@ -1,74 +1,4 @@
-- 9h https://www.youtube.com/watch?v=rltfdjcXjmk
-- 1h https://www.youtube.com/watch?v=fBNz5xF-Kx4
-- 10h 4 projects https://www.youtube.com/watch?v=qwfE7fSVaZM
-- 8h learn https://www.youtube.com/watch?v=Oe421EPjeBE
-- Node.js Intro: https://github.com/maxogden/art-of-node
-- https://github.com/sergtitov/NodeJS-Learning#videos
-- x86
-- --enable-lto
-  --with-snapshot (enabled by default)
-  - Introduced in https://github.com/nodejs/node/issues/17058
-- How to npm install global not as root?
-  https://stackoverflow.com/questions/18088372/how-to-npm-install-global-not-as-root
-  #+NAME: ~/.npmrc
-  #+begin_src
-  prefix=${HOME}/.npm-packages
-  #+end_src
-  #+NAME: ~/.bashrc
-  #+begin_src shell
-  #mkdir "${HOME}/.npm-packages"
-  NPM_PACKAGES="${HOME}/.npm-packages"
-  NODE_PATH="$NPM_PACKAGES/lib/node_modules:$NODE_PATH"
-  PATH="$NPM_PACKAGES/bin:$PATH"
-  # Unset manpath so we can inherit from /etc/manpath via the `manpath`
-  # command
-  unset MANPATH # delete if you already modified MANPATH elsewhere in your config
-  MANPATH="$NPM_PACKAGES/share/man:$(manpath)"
-  #+end_src
-* Standard Modules
-- https://www.w3schools.com/nodejs/ref_modules.asp
-  Here is a list of the built-in modules of Node.js version 6.10.3:
-- https://www.w3schools.com/nodejs/ref_fs.asp
-| Module         | Description                                             |
-|----------------+---------------------------------------------------------|
-| assert         | Provides a set of assertion tests                       |
-| buffer         | handle binary data                                      |
-| child_process  | run a child process                                     |
-| cluster        | split a single Node process into multiple processes     |
-| crypto         | handle OpenSSL cryptographic functions                  |
-| dgram          | Provides implementation of UDP datagram sockets         |
-| dns            | do DNS lookups and name resolution functions            |
-| domain         | Deprecated. handle unhandled errors                     |
-| events         | handle events                                           |
-| fs             | handle the file system                                  |
-| http           | make Node.js act as an HTTP server                      |
-| https          | make Node.js act as an HTTPS server.                    |
-| net            | create servers and clients                              |
-| os             | Provides information about the operation system         |
-| path           | handle file paths                                       |
-| punycode       | Deprecated. A character encoding scheme                 |
-| querystring    | handle URL query strings                                |
-| readline       | handle readable streams one line at the time            |
-| stream         | handle streaming data                                   |
-| string_decoder | decode buffer objects into strings                      |
-| timers         | execute a function after a given number of milliseconds |
-| tls            | implement TLS and SSL protocols                         |
-| tty            | Provides classes used by a text terminal                |
-| url            | parse URL strings                                       |
-| util           | access utility functions                                |
-| v8             | access information about V8 (the JavaScript engine)     |
-| vm             | compile JavaScript code in a virtual machine            |
-| zlib           | compress or decompress files                            |
-|----------------+---------------------------------------------------------|
-* DONE Article: 2019  Reduce Promises memory usage in Node.js
-  https://dev.to/shaggydoag/reduce-promises-memory-usage-in-node-js-1a3i
-  - 3000MB max ammount of memory on AWS lambda
-  - Promise are not memory friendly
-    https://github.com/nodejs/node/issues/6673
-  - bluebird
-    http://bluebirdjs.com/docs/getting-started.html
-  - Solution was to reduce the number of concurrent promises
-* Book: 2019 - Fullstack Node.js
+* 19 | Fullstack Node.js
 ** Your First Node API
 - Created on 2009, By Ryan Dahl, a Ruby developer
 - Non blocking I/O
@@ -205,7 +135,7 @@ async function printLength(file) {
   }
 }
 #+end_src
-* Book: 2019 - Scaling Your Node.js Apps
+* 19 | Scaling Your Node.js Apps
 ** 2 Architectural Patterns
 1) Layered Architecture (aka n-tier arch patttern)
    - each layer has a purpose/functionality
@@ -227,7 +157,7 @@ async function printLength(file) {
      3) Event Source(s)
      4) Event Consumer(s)
    - Need to avoid component-to-component communication
-* TODO Book: 2019 - Get Programming with Node.js
+* 19 | Get Programming with Node.js
 - Queries http://mongoosejs.com/docs/queries.html
 - Schema https://mongoosejs.com/docs/schematypes.html
 - Promises https://mongoosejs.com/docs/promises.html
@@ -1176,7 +1106,7 @@ courses: [{type: mongoose.schema.Types.ObjectId,
 #+end_src
 *** TODO populate
     pag 188
-* TODO Book: 2021 - Distributed Systems with Node.js
+* 21 | Distributed Systems with Node.js
 ** 1 Why Distributed
 - Node.js Modules
   1) cluster, instances, https://nodejs.org/api/cluster.html
